--- a/src/app/components/course/form/calendar/calendar.component.css
+++ b/src/app/components/course/form/calendar/calendar.component.css
@@ -1,8 +1,5 @@
-h3 {
-  margin: 0 0 10px;
-}
-
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
+.inline-flatpickr .form-control,
+.flatpickr-calendar.arrowTop:before,
+.flatpickr-calendar.arrowTop:after {
+    display: none;
 }
