--- a/src/app/components/course/form/calendar/calendar.component.html
+++ b/src/app/components/course/form/calendar/calendar.component.html
@@ -1,10 +1,4 @@
-<div class="row">
-  <div class="container">
-    <h3 align="left" style="color:#ec6608;font-size:28px;">Seleccione la fecha de inicio y horario de su preferencia</h3>
-    <hr style="border-top: 1px solid #ec6608;">
-  </div>
-</div>
-<div class="row">
+<div>
   <div class="col-md-6" align="center">
     <div class="col-md-offset-1">
 
@@ -36,7 +30,6 @@
                 [altInput]="true"
                 [convertModelValue]="true"
                 [inline]="true">
-              NgModel value: {{ inlineDatePicker }}
             </div>
             <div class="col-md-12">
               <dl>
