--- a/src/app/components/course/form/form.component.html
+++ b/src/app/components/course/form/form.component.html
@@ -1,4 +1,14 @@
-<app-calendar></app-calendar>
-<app-schedule></app-schedule>
+<div class="row">
+  <div class="container">
+    <h3 align="left" style="color:#ec6608;font-size:28px;">Seleccione la fecha de inicio y horario de su preferencia</h3>
+    <hr style="border-top: 1px solid #ec6608;">
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <app-calendar></app-calendar>
+    <app-schedule></app-schedule>
+  </div>
+</div>
 <app-selected></app-selected>
 <app-data></app-data>
