--- a/src/app/components/course/form/schedule/schedule.component.html
+++ b/src/app/components/course/form/schedule/schedule.component.html
@@ -1,11 +1,11 @@
-<div align="left">
-    <div class="container">
+<div class="container" align="left">
+    <div class="col-md-6">
       <h4 style="color: #f39500">Horarios de clases teoricas</h4>
       <h6>Lunes a Sabado, de 19:00 a 21:00 hrs.</h6>
       <h4 style="color: #f39500">Horarios de clases practicas</h4>
       <h6>Disponibles segun tu seleccion, desde: Lunes 16 de octubre al jueves 19 de octubre.</h6>
       <h5 style="color: #f39500">Puede seleccionar el horario que mejor le acomode</h5>
-      <div class="row">
+      <div class="container">
           <div class="row" align="left">
             <p>
             <span style="background-color: #aedabd">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><b> Tarifa Baja (10%)   </b>
@@ -16,8 +16,8 @@
             <p>
             <span style="background-color: #859ea7">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><b> No Disponible</b><br>
           </div>
-        </div>
-      <div class="col-md-6">
+      </div>
+      <div>
         <table class="table">
           <tr>
             <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="showDatos()">  6:30 - 7:15</td>
@@ -57,4 +57,4 @@
         </table>
       </div>
     </div>
-  </div>
+</div>
