--- a/src/app/components/course/form/schedule/schedule.component.html
+++ b/src/app/components/course/form/schedule/schedule.component.html
@@ -20,19 +20,19 @@
       <div>
         <table class="table">
           <tr>
-            <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="showDatos()">  6:30 - 7:15</td>
-            <td style="background-color: #fcce9e"><input  type="radio" name="optradio">  11:45 - 12:30</td>
-            <td style="background-color: #fcce9e"><input  type="radio" name="optradio">  17:00 - 17:45</td>
+            <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="nextStep()">  6:30 - 7:15</td>
+            <td style="background-color: #fcce9e"><input  type="radio" name="optradio" (change)="nextStep()">  11:45 - 12:30</td>
+            <td style="background-color: #fcce9e"><input  type="radio" name="optradio" (change)="nextStep()">  17:00 - 17:45</td>
           </tr>
           <tr>
-            <td style="background-color: #aedabd"><input  type="radio" name="optradio">  7:15 - 8:00</td>
-            <td style="background-color: #aedabd"><input  type="radio" name="optradio">  12:30 - 1:15</td>
-            <td style="background-color: #e2a1a4"><input  type="radio" name="optradio">  17:45 - 18:30</td>
+            <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="nextStep()">  7:15 - 8:00</td>
+            <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="nextStep()">  12:30 - 13:15</td>
+            <td style="background-color: #e2a1a4"><input  type="radio" name="optradio" (change)="nextStep()">  17:45 - 18:30</td>
           </tr>
           <tr>
-            <td style="background-color: #aedabd"><input  type="radio" name="optradio">  8:00 - 8:45</td>
-            <td style="background-color: #fcce9e"><input  type="radio" name="optradio">  13:15 - 14:00</td>
-            <td style="background-color: #e2a1a4"><input  type="radio" name="optradio">  18:30 - 19:15</td>
+            <td style="background-color: #aedabd"><input  type="radio" name="optradio" (change)="nextStep()">  8:00 - 8:45</td>
+            <td style="background-color: #fcce9e"><input  type="radio" name="optradio" (change)="nextStep()">  13:15 - 14:00</td>
+            <td style="background-color: #e2a1a4"><input  type="radio" name="optradio" (change)="nextStep()">  18:30 - 19:15</td>
           </tr>
           <tr>
             <td style="background-color: #aedabd"><input  type="radio" name="optradio">  8:45 - 9:30</td>
