--- a/src/app/components/course/resume/resume.component.html
+++ b/src/app/components/course/resume/resume.component.html
@@ -1,170 +1,4 @@
 <div class="row">
-   <div class="row">
-     <div class="container">
-      <div class="row"><h2 style="color:#ec6608;font-size:28px;">Datos del Alumno</h2></div>
-        <div class="col-md-4">
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="rut">RUT:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">11234568</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="nombres">Nombres:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elnombre">Andrew Stephan</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="apellido1">Apellido Paterno:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">Fuller</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="apellido1">Apellido Materno:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">Swesny</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="email">e-mail:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">andrewfuller@atlas.com</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="email2">Confirme su e-mail:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">andrewfuller@atlas.com</label>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="calle">Calle:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">5th Avenue</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="numero">Numero:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">35-18</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="departamento">Departamento:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">2-B</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="fechanac">Fecha de Nacimiento:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">11/10/1985</label>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-sm-6" for="codvendedor">Codigo vendedor:</label>
-                      <div class="col-sm-6">
-                        <label class="control-label" id="elrut">358818</label>
-                      </div>
-                    </div>
-
-                </div>
-                <div class="col-md-4">
-                  <p>
-                    ¿Tienes un Convenio?<br>
-                    Promociones<br>
-                    Cupon Descuento
-                  </p>
-                  <input type="text" class="form-control" id="desc" name="desc">
-                </div>
-
-      </div>
-      <div class="row">
-                <div class="form-group">
-                  <div align="center">
-                    <button type="submit" class="btn btn-default">Corregir Datos</button>
-                    <button type="submit" class="btn btn-default">Continuar</button>
-                  </div>
-                </div>
-              </div>
-              </div>
-
-  <div class="row">
-    <div class="container">
-      <div class="row"><h2 style="color:#ec6608;font-size:28px;">Contrato</h2></div>
-      <div class="row">
-        <div class="col-md-7">
-          <div  class="grey" style="background-color: #afbfc4div!important;height: 300px; overflow-y: scroll;">
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-              sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-              magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-              quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-              ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-              dolor in hendrerit in vulputate velit esse molestie consequat,
-              vel illum dolore eu feugiat nulla facilisis at vero eros et
-              accumsan et iusto odio dignissim qui blandit praesent luptatum
-              zzril delenit augue duis dolore te feugait nulla facilisi.
-              Nam liber tempor cum soluta nobis eleifend option congue
-              nihil imperdiet doming id quod mazim placerat facer possim
-              assum. Typi non habent claritatem insitam; est usus legentis
-              in iis qui facit eorum claritatem. Investigationes
-              demonstraverunt lectores legere me lius quod ii legunt saepius.
-              Claritas est etiam processus dynamicus, qui sequitur mutationem
-              consuetudium lectorum. Mirum est notare quam littera gothica,
-              quam nunc putamus parum claram, anteposuerit litterarum formas
-              humanitatis per seacula quarta decima et quinta decima. Eodem
-              modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
-              in futurum.
-
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-              sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-              magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-              quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-              ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-              dolor in hendrerit in vulputate velit esse molestie consequat,
-              vel illum dolore eu feugiat nulla facilisis at vero eros et
-              accumsan et iusto odio dignissim qui blandit praesent luptatum
-              zzril delenit augue duis dolore te feugait nulla facilisi.
-              Nam liber tempor cum soluta nobis eleifend option congue
-              nihil imperdiet doming id quod mazim placerat facer possim
-              assum. Typi non habent claritatem insitam; est usus legentis
-              in iis qui facit eorum claritatem. Investigationes
-              demonstraverunt lectores legere me lius quod ii legunt saepius.
-              Claritas est etiam processus dynamicus, qui sequitur mutationem
-              consuetudium lectorum. Mirum est notare quam littera gothica,
-              quam nunc putamus parum claram, anteposuerit litterarum formas
-              humanitatis per seacula quarta decima et quinta decima. Eodem
-              modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
-              in futurum.
-            </div>
-        </div>
-        <div class="col-md-5">
-
-          <h4 style="color:#ec6608;">Valor Neto de Compra</h4>
-          <h3>
-            <b>$99.990</b>
-          </h3>
-          <h4 style="color:#ec6608;">Seleccione un Medio de Pago</h4>
-            <input type="radio" name="optradiopago">
-            <img class="img-responsive" width="150px" src="//www.e-commercechile.com/wp-content/uploads/2015/11/webpay-456x200.png" alt="webpay">
-            <div class="row grey">
-              <h4 style="color:#ec6608;">Lea Detenidamente el contrato</h4>
-              <div class="checkbox">
-                <label><input type="checkbox" value="">He leido y acepto los terminos y condiciones</label>
-              </div>
-            </div>
-            <div class="form-group">
-                <div align="center">
-
-                  <button type="button" class="btn btn-default" (click)="finish()">Pagar</button>
-                </div>
-              </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-resume-data (next)="showPayment(event)" (previous)="previousStep(event)"></app-resume-data>
+  <app-payment *ngIf="payment"></app-payment>
 </div>
