--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
 <app-list (open)="showForm(event)"></app-list>
-<app-form></app-form>
 <app-form *ngIf="viewForm" (open)="showResumen(event)"></app-form>
-<app-resume *ngIf="viewResumen"></app-resume>
+<app-resume *ngIf="viewResumen" (back)="backForm(event)"></app-resume>
