--- a/src/app/components/course/form/form.component.html
+++ b/src/app/components/course/form/form.component.html
@@ -1,3 +1,4 @@
+<app-data (open)="nextStep($event)"></app-data>
 <div class="row">
   <div class="container">
     <h3 align="left" style="color:#ec6608;font-size:28px;">Seleccione la fecha de inicio y horario de su preferencia</h3>
@@ -6,11 +7,11 @@
 </div>
 <div class="container">
   <div class="row">
-    <app-calendar (open)="showSchedule(event)"></app-calendar>
-    <app-schedule *ngIf="schedule" (open)="showData(event)"></app-schedule>
+    <app-calendar (open)="showSchedule($event)"></app-calendar>
+    <app-schedule *ngIf="schedule" (open)="showData($event)"></app-schedule>
   </div>
 </div>
 <div *ngIf="data">
   <app-selected></app-selected>
-  <app-data (open)="nextStep(event)"></app-data>
+  <app-data (open)="nextStep($event)"></app-data>
 </div>
