--- a/src/app/components/course/resume/resume.component.html
+++ b/src/app/components/course/resume/resume.component.html
@@ -1,4 +1,8 @@
 <div class="row">
-  <app-resume-data *ngIf="!payment" (next)="showPayment(event)" (previous)="previousStep(event)"></app-resume-data>
+  <app-resume-data
+    *ngIf="!payment"
+    (next)="showPayment(event)"
+    (previous)="previousStep(event)"
+    [student]="student"></app-resume-data>
   <app-payment *ngIf="payment"></app-payment>
 </div>
