--- a/src/app/components/course/resume/resume-data/resume-data.component.html
+++ b/src/app/components/course/resume/resume-data/resume-data.component.html
@@ -5,37 +5,37 @@
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="rut">RUT:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">11234568</label>
+                     <label class="control-label" id="elrut">{{student.rut}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="nombres">Nombres:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elnombre">Andrew Stephan</label>
+                     <label class="control-label" id="elnombre">{{student.nombres}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="apellido1">Apellido Paterno:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">Fuller</label>
+                     <label class="control-label" id="elrut">{{student.apellidoPaterno}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="apellido1">Apellido Materno:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">Swesny</label>
+                     <label class="control-label" id="elrut">{{student.apellidoMaterno}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="email">e-mail:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">andrewfuller@atlas.com</label>
+                     <label class="control-label" id="elrut">{{student.email}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="email2">Confirme su e-mail:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">andrewfuller@atlas.com</label>
+                     <label class="control-label" id="elrut">{{student.emailConfirmacion}}</label>
                    </div>
                  </div>
              </div>
@@ -43,31 +43,31 @@
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="calle">Calle:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">5th Avenue</label>
+                     <label class="control-label" id="elrut">{{student.calle}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="numero">Numero:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">35-18</label>
+                     <label class="control-label" id="elrut">{{student.numero}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="departamento">Departamento:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">2-B</label>
+                     <label class="control-label" id="elrut">{{student.departamento}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="fechanac">Fecha de Nacimiento:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">11/10/1985</label>
+                     <label class="control-label" id="elrut">{{student.fecha}}</label>
                    </div>
                  </div>
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="codvendedor">Codigo vendedor:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">358818</label>
+                     <label class="control-label" id="elrut">{{student.codigoVendedor}}</label>
                    </div>
                  </div>
 
