--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
-<app-list (open)="showForm(event)"></app-list>
-<app-form *ngIf="viewForm" (open)="showResumen(event)"></app-form>
-<app-resume *ngIf="viewResumen" (back)="backForm(event)"></app-resume>
+<app-list (open)="showForm($event)"></app-list>
+<app-form *ngIf="viewForm" (open)="showResumen($event)"></app-form>
+<app-resume
+  *ngIf="viewResumen"
+  (back)="backForm($event)"
+  [student]="student">
+</app-resume>
