Pruebas conexion con servicios
Se agrego una prueba en el componente header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
+<script src="assets/Dewi/js/jquery.soap.js"></script>
 <header>
   <nav div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
@@ -26,7 +27,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="navbar-brand">
-              <a href="#"><h1><span>Escuela</span> de manejo</h1></a>
+              <a href="#"><h1 class="titleTest"><span>Escuela</span> de manejo</h1></a>
             </div>
           </div>
           <br><br>
@@ -35,7 +36,7 @@
             <div class="menu">
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation"><a href="#" class="active">Home</a></li>
-                <li role="presentation"><a href="services.html">Services</a></li>
+                <li role="presentation"><a (click)="test()">Services</a></li>
                 <li role="presentation"><a href="blog.html">Blog</a></li>
                 <li role="presentation"><a href="portfolio.html">Portfolio</a></li>
                 <li role="presentation"><a href="contact.html">Contact</a></li>
