--- a/src/app/components/course/list/list.component.html
+++ b/src/app/components/course/list/list.component.html
@@ -24,13 +24,20 @@
       <div class="row">
         <div class="container">
           <div class="your-class" style="margin:1%">
-            <!--div><img src="//lorempixel.com/300/200/transport/1" /></div-->
+            <!--div><img src="//lorempixel.com/300/200/transport/1" /></div
             <div><img src="assets/img/productos/1.png" /></div>
             <div><img src="assets/img/productos/2.png" /></div>
             <div><img src="assets/img/productos/3.png" /></div>
             <div><img src="assets/img/productos/4.png" /></div>
             <div><img src="assets/img/productos/5.png" /></div>
             <div><img src="assets/img/productos/6.png" /></div>
+            -->
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/1.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/2.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/3.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/4.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/5.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/6.png" /></div>
           </div>
         </div>
       </div>
@@ -46,11 +53,17 @@
     <h6 align="left">Seleccione un curso de su interés para ver fechas y horarios disponibles</h6>
     <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Get it now</a></p>-->
     <div class="my-class slider-nav" >
+        <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/cursos/r1.png" (click)="select(1)"/></div>
+        <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/cursos/r2.png" (click)="select(2)"/></div>
+        <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/cursos/r3.png" (click)="select(1)"/></div>
+        <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/cursos/r4.png" (click)="select(2)"/></div>
+    </div>
+    <!--div class="my-class slider-nav" >
         <div><img src="assets/img/cursos/r1.png" (click)="select(1)"/></div>
         <div><img src="assets/img/cursos/r2.png" (click)="select(2)"/></div>
         <div><img src="assets/img/cursos/r3.png" (click)="select(1)"/></div>
         <div><img src="assets/img/cursos/r4.png" (click)="select(2)"/></div>
-    </div>
+    </div-->
 
 
     <div class="row" align="left">
