--- a/src/app/components/course/list/list.component.html
+++ b/src/app/components/course/list/list.component.html
@@ -32,7 +32,7 @@
             <div><img src="assets/img/productos/5.png" /></div>
             <div><img src="assets/img/productos/6.png" /></div>
             -->
-            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/1.png" /></div>
+            <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/1.png" (click)="onTest()"/></div>
             <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/2.png" /></div>
             <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/3.png" /></div>
             <div><img src="http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/4.png" /></div>
