--- a/src/app/components/course/list/list.component.html
+++ b/src/app/components/course/list/list.component.html
@@ -1,6 +1,3 @@
-<!-- IMPORTE DE SLICK -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 <div class="box">
   <div class="container">
       <div class="row">
@@ -23,7 +20,7 @@
       </div>
       <div class="row">
         <div class="container">
-          <div class="your-class" style="margin:1%">
+          <div class="your-class">
             <!--div><img src="//lorempixel.com/300/200/transport/1" /></div
             <div><img src="assets/img/productos/1.png" /></div>
             <div><img src="assets/img/productos/2.png" /></div>
