--- a/src/app/components/course/resume/payment/payment.component.html
+++ b/src/app/components/course/resume/payment/payment.component.html
@@ -4,27 +4,20 @@
     <div class="row">
       <div class="col-md-7">
         <div  class="grey" style="background-color: #afbfc4div!important;height: 300px; overflow-y: scroll;">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-            dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et
-            accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
-            Nam liber tempor cum soluta nobis eleifend option congue
-            nihil imperdiet doming id quod mazim placerat facer possim
-            assum. Typi non habent claritatem insitam; est usus legentis
-            in iis qui facit eorum claritatem. Investigationes
-            demonstraverunt lectores legere me lius quod ii legunt saepius.
-            Claritas est etiam processus dynamicus, qui sequitur mutationem
-            consuetudium lectorum. Mirum est notare quam littera gothica,
-            quam nunc putamus parum claram, anteposuerit litterarum formas
-            humanitatis per seacula quarta decima et quinta decima. Eodem
-            modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
-            in futurum.
-          </div>
+          <p> 
+            Si es de PLAZO FIJO, debe dejarse constancia que se trata de UN AÑO LABORAL DOCENTE, vale decir, no puede pactarse por períodos inferiores o superiores a éste, excepcionalmente podrá estipularse en el CONTRATO DE PLAZO FIJO una duración INFERIOR al AÑO LABORAL DOCENTE, en los siguientes casos:
+          a.- Si termina el contrato de un Profesional de la Educación en el transcurso del Año Laboral Docente, caso en el cual el Empleador tiene derecho a contratar a otro trabajador, pero, sólo por el tiempo que resta hasta el término del respectivo Año Laboral Docente;
+          b.- En el caso de Profesionales de la Educación contratados para actividades extraordinarias o especiales que tengan una duración inferior al Año Escolar.
+          Sobre este punto y para una adecuada compresión de esta norma de excepción debe tenerse presente el concepto de Año Escolar que si bien no ha sido definido por el legislador comprende, según lo informado por el Ministerio de Educación, el tiempo que media entre la iniciación de actividades del Establecimiento Educacional -generalmente- el Lunes de la última semana del mes anterior a aquel en que se inician las clases y el cierre del Establecimiento, normalmente, Diciembre.
+          Los profesionales de la Educación, así contratados no podrán ejecutar actividades de naturaleza regular en virtud del contrato extendido en esas condiciones.
+          Este contrato de Trabajo a PLAZO FIJO, se transforma en INDEFINIDO:
+          a.- Cuando el Profesional de la Educación continúa prestando servicios con conocimiento del Empleador después de expirado el plazo fijado para su terminación, y
+          b.- Cuando el Contrato de Plazo fijo, ha sido renovado por SEGUNDA vez.
+          Cabe señalar, por último que, la transformación del Contrato en INDEFINIDO, sólo opera respecto de los contratos de plazo fijo que se celebran por un AÑO LABORAL DOCENTE, por disponerlo así expresamente el artículo 54, inciso 2° primera parte del Estatuto Docente. Asimismo, es importante señalar que la transformación del contrato de plazo fijo en INDEFINIDO igualmente opera en el caso de aquellos celebrados por un período inferior a un AÑO LABORAL DOCENTE, ello en virtud de la aplicación supletoria del Código del Trabajo.
+          (**) NOTA 2
+          Pueden ser, también: "Asignación de Experiencia", de "perfeccionamiento", "Asignación por Desempeño en Condiciones Difíciles", "Responsabilidad Directiva" etc. Ley 19.070 etc.
+          </p>
+        </div>
       </div>
       <div class="col-md-5">
 
